
$HEADER$

===========================================================================

This file contains the main features as well as overviews of specific
bug fixes (and other actions) for each version of hwloc since version
0.9.


Version 2.10.0
--------------
* Add support for new AMD CPUID leaf 0x80000026 for better detection
  of Core Complex and Die on Zen4 processors in the x86 backend.


Version 2.9.1
-------------
* Don't forget to apply object type filters to "perflevel" caches detected
  on recent Mac OS X releases, thanks to Michel Lesoinne for the report.
* Fix a failed assertion in hwloc_topology_restrict() when some NUMA nodes
  are removed because of HWLOC_RESTRICT_FLAG_REMOVE_CPULESS but no PUs are.
  Thanks to Mark Grondona for reporting the issue.
* Mark HPE Cray Slingshot NICs with subtype "Slingshot".


Version 2.9.0
-------------
* Backends
  + Expose the memory size of CXL memory devices (Type 3) on Linux.
  + The LevelZero backend now reports the "XeLinkBandwidth" distance
    matrix between L0 devices (and subdevices) when available.
  + Add support for CUDA compute capability up to 9.0.
* Tools
  + lstopo now switches to console mode when its output is redirected.
    Graphical window mode may be forced back with --of window.
  + hwloc-calc now accepts "numa" in -H, and I/O subtypes such as "gpu"
    in -I and -N.


Version 2.8.0
-------------
* API
  + Add HWLOC_TOPOLOGY_FLAG_NO_DISTANCES, _NO_MEMATTRS and _NO_CPUKINDS
    to reduce the overhead when unneeded.
  + Add separate Read/Write Bandwidth/Latency memory attributes and
    implement them on Linux.
* Backends
  + NUMA nodes may now have a subtype such as DRAM, HBM, SPM, or NVM
    on heterogeneous memory platforms on Linux.
    - Add DAXType and DAXParent attributes on Linux to tell where a
      DAX device or its corresponding NUMA node come from (SPM for
      Specific-Purpose or NVM for Non-Volatile Memory).
  + Detect heterogeneous caches in hybrid CPUs on MacOS X,