@@ -21,6 +21,8 @@ Version 2.10.0
 --------------
 * Add support for new AMD CPUID leaf 0x80000026 for better detection
   of Core Complex and Die on Zen4 processors in the x86 backend.
+* Ignore buggy memory-side caches and memory attributes when fake NUMA
+  emulation is enabled on the Linux kernel command-line.
 
 
 Version 2.9.1
